<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventAdapter">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/title_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_text"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="31dp"
        android:text="@string/event_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_time" />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/event_title" />

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/event_delete"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:onClick="deleteEvent"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_text"
        tools:ignore="OnClick" />

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/event_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:onClick="updateEvent"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_delete"
        app:layout_constraintTop_toBottomOf="@+id/event_text"
        tools:ignore="MissingConstraints,OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>